[kimios-karaf-commands] Fixed project.version reference, release preparationGoals, and removed fabric8 module from pom