@@ -1,4 +1,3 @@
 #!/bin/sh
-
-
-mvn -DautoVersionSubmodules=true release:prepare
+export MAVEN_OPT="-Xmx6000m -Xms1024m -XX:MaxPermSize=1524m"
+mvn  -DskipTests=true -DautoVersionSubmodules=true release:prepare
